--- a/Homework1_ac4635.html
+++ b/Homework1_ac4635.html
@@ -372,11 +372,59 @@ summary {
 <div id="TOC">
 <ul>
 <li><a href="#problem-1">Problem 1</a></li>
+<li><a href="#problem-2">Problem 2</a></li>
 </ul>
 </div>
 
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## ── Attaching packages ────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
+## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
+## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
+## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
+<pre><code>## ── Conflicts ───────────────────────── tidyverse_conflicts() ──
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()</code></pre>
 <div id="problem-1" class="section level1">
 <h1>Problem 1</h1>
+<p>Creat a data frame with specified elements.</p>
+<pre class="r"><code>problem1_df =
+  tibble (
+  samp = rnorm(10),
+  samp_gt_0 = samp &gt; 0,
+  char_vec = c(&quot;a&quot;, &quot;b&quot;, &quot;c&quot;,  &quot;d&quot;,  &quot;e&quot;,  &quot;f&quot;, &quot;g&quot;, &quot;h&quot;, &quot;a&quot;, &quot;j&quot;),
+  factor_vec = factor(c(&quot;low&quot;, &quot;low&quot;, &quot;low&quot;,  &quot;mod&quot;,  &quot;mod&quot;,  &quot;mod&quot;, &quot;mod&quot;, &quot;high&quot;, &quot;high&quot;, &quot;high&quot;))
+)</code></pre>
+<p>Take the mean of each variable in the data frame.</p>
+<pre class="r"><code>mean (pull(problem1_df, samp))</code></pre>
+<pre><code>## [1] 0.5693772</code></pre>
+<pre class="r"><code>mean (pull(problem1_df, samp_gt_0))</code></pre>
+<pre><code>## [1] 0.8</code></pre>
+<pre class="r"><code>mean (pull(problem1_df, char_vec))</code></pre>
+<pre><code>## Warning in mean.default(pull(problem1_df, char_vec)): argument is not numeric or
+## logical: returning NA</code></pre>
+<pre><code>## [1] NA</code></pre>
+<pre class="r"><code>mean (pull(problem1_df, factor_vec))</code></pre>
+<pre><code>## Warning in mean.default(pull(problem1_df, factor_vec)): argument is not numeric
+## or logical: returning NA</code></pre>
+<pre><code>## [1] NA</code></pre>
+<p>Take the mean of numbers and logical but not character or factor.</p>
+<pre class="r"><code>as.numeric (pull(problem1_df, samp))</code></pre>
+<pre><code>##  [1]  0.12426802  0.95910841  0.26314913  1.23862931 -0.11287693  1.43841787
+##  [7]  1.31602132  0.25974296  0.25291890 -0.04560715</code></pre>
+<pre class="r"><code>as.numeric (pull(problem1_df, samp_gt_0))</code></pre>
+<pre><code>##  [1] 1 1 1 1 0 1 1 1 1 0</code></pre>
+<pre class="r"><code>as.numeric (pull(problem1_df, char_vec))</code></pre>
+<pre><code>## Warning: NAs introduced by coercion</code></pre>
+<pre><code>##  [1] NA NA NA NA NA NA NA NA NA NA</code></pre>
+<pre class="r"><code>as.numeric (pull(problem1_df, factor_vec))</code></pre>
+<pre><code>##  [1] 2 2 2 3 3 3 3 1 1 1</code></pre>
+</div>
+<div id="problem-2" class="section level1">
+<h1>Problem 2</h1>
+<p>data(“penguins”, package = “palmerpenguins”)</p>
+<p>ls (penguins) nrow (bill_depth_mm)</p>
+<p>```</p>
 </div>
 
 
