--- a/Homework1_ac4635.html
+++ b/Homework1_ac4635.html
@@ -377,12 +377,12 @@ summary {
 </div>
 
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
 ## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <div id="problem-1" class="section level1">
@@ -395,11 +395,11 @@ summary {
     char_vec = c(&quot;a&quot;, &quot;b&quot;, &quot;c&quot;, &quot;d&quot;, &quot;e&quot;, &quot;f&quot;, &quot;g&quot;, &quot;h&quot;, &quot;i&quot;, &quot;j&quot;),
     factor_vec = factor(c(&quot;low&quot;, &quot;low&quot;, &quot;low&quot;, &quot;mod&quot;, &quot;mod&quot;, &quot;mod&quot;, &quot;mod&quot;, &quot;high&quot;, &quot;high&quot;, &quot;high&quot;))
   )</code></pre>
-<p>Take the mean of each variable in the data frame.</p>
+<p>Take the mean of each variable in the data frame:</p>
 <pre class="r"><code>mean (pull(problem1_df, samp))
-## [1] 0.3138879
+## [1] -0.2595999
 mean (pull(problem1_df, samp_gt_0))
-## [1] 0.6
+## [1] 0.4
 mean (pull(problem1_df, char_vec))
 ## Warning in mean.default(pull(problem1_df, char_vec)): argument is not numeric or
 ## logical: returning NA
@@ -408,7 +408,7 @@ mean (pull(problem1_df, factor_vec))
 ## Warning in mean.default(pull(problem1_df, factor_vec)): argument is not numeric
 ## or logical: returning NA
 ## [1] NA</code></pre>
-<p>Take the mean of numbers and logical but not character or factor.</p>
+<p>The mean works for sample and logical vectors, but not character vectors and factor vectors.</p>
 <pre class="r"><code>as.numeric (pull(problem1_df, samp))
 as.numeric (pull(problem1_df, samp_gt_0))
 as.numeric (pull(problem1_df, char_vec))
@@ -418,9 +418,9 @@ as.numeric (pull(problem1_df, factor_vec))</code></pre>
 <h1>Problem 2</h1>
 <pre class="r"><code>data(&quot;penguins&quot;, package = &quot;palmerpenguins&quot;)</code></pre>
 <p>The Penguin dataset contains the following variables: bill_depth_mm, bill_length_mm, body_mass_g, flipper_length_mm, island, sex, species, year</p>
-<p>The size of the Penguin dataset contains 344 rows or observations and 8 variables or columns.</p>
-<p>Species is factor variable.</p>
-<p>Island is factor variable.</p>
+<p>The size of the Penguin dataset contains 344 rows or observations and 8 columns or variables.</p>
+<p>Species is factor variable with 3 categories: Adelie, Chinstrap, Gentoo.</p>
+<p>Island is factor variable with with 3 categories: Biscoe, Dream, Torgersen.</p>
 <p>The bill length is a numeric variable. The mean bill length is 43.9219298 and the median bill length is 44.45 . The minimum bill length is 32.1mm and the maximum bill length is 32.1mm.</p>
 <p>Bill depth is a numeric variable. The range for bill depth is between 13.1, 21.5.</p>
 <p>Flipper length is a integer variable. The mean flipper length is 200.9152047 and the median flipper length is 197.</p>
