Mean, Median, Minimum, Maximum and range were defined for bill length, bill depth and flipper length as appropriate.

--- a/Homework1_ac4635.html
+++ b/Homework1_ac4635.html
@@ -397,9 +397,9 @@ summary {
   )</code></pre>
 <p>Take the mean of each variable in the data frame:</p>
 <pre class="r"><code>mean (pull(problem1_df, samp))
-## [1] -0.2595999
+## [1] 0.02843283
 mean (pull(problem1_df, samp_gt_0))
-## [1] 0.4
+## [1] 0.5
 mean (pull(problem1_df, char_vec))
 ## Warning in mean.default(pull(problem1_df, char_vec)): argument is not numeric or
 ## logical: returning NA
@@ -421,9 +421,9 @@ as.numeric (pull(problem1_df, factor_vec))</code></pre>
 <p>The size of the Penguin dataset contains 344 rows or observations and 8 columns or variables.</p>
 <p>Species is factor variable with 3 categories: Adelie, Chinstrap, Gentoo.</p>
 <p>Island is factor variable with with 3 categories: Biscoe, Dream, Torgersen.</p>
-<p>The bill length is a numeric variable. The mean bill length is 43.9219298 and the median bill length is 44.45 . The minimum bill length is 32.1mm and the maximum bill length is 32.1mm.</p>
-<p>Bill depth is a numeric variable. The range for bill depth is between 13.1, 21.5.</p>
-<p>Flipper length is a integer variable. The mean flipper length is 200.9152047 and the median flipper length is 197.</p>
+<p>Bill length is a numeric variable. The mean bill length is 43.9219298mm and the median bill length is 44.45mm . The minimum bill length is 32.1mm and the maximum bill length is 32.1mm.</p>
+<p>Bill depth is a numeric variable. The mean bill depth is 17.1511696mm and the median bill depth is 17.3mm .The minimum bill depth is 13.1mm and the maximum bill depth is 13.1mm.</p>
+<p>Flipper length is a integer variable. The mean flipper length is 200.9152047 and the median flipper length is 197. The range for flipper length is between 172, 231.</p>
 <p>Body mass index is a integer variable.</p>
 <p>Sex is integer variable.</p>
 <p>Year is integer variable with a range of 2007, 2009.</p>
