--- a/Homework1_ac4635.html
+++ b/Homework1_ac4635.html
@@ -377,12 +377,12 @@ summary {
 </div>
 
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
 ## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ───────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <div id="problem-1" class="section level1">
@@ -397,9 +397,9 @@ summary {
   )</code></pre>
 <p>Take the mean of each variable in the data frame:</p>
 <pre class="r"><code>mean (pull(problem1_df, samp))
-## [1] -0.0129106
+## [1] 0.427448
 mean (pull(problem1_df, samp_gt_0))
-## [1] 0.5
+## [1] 0.7
 mean (pull(problem1_df, char_vec))
 ## Warning in mean.default(pull(problem1_df, char_vec)): argument is not numeric or
 ## logical: returning NA
